style: aplica formatacao automatica do prettier em todos os arquivos
